Implement application init, authentication service